--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,9 @@
 /.coveralls.yml export-ignore
+/.laminas-ci.json export-ignore
 /.gitattributes export-ignore
+/composer.lock export-ignore
 /.github/ export-ignore
 /.gitignore export-ignore
-/.travis.yml export-ignore
 /docs/ export-ignore
 /mkdocs.yml export-ignore
 /phpcs.xml export-ignore
