--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,15 @@
     },
     "extra": {
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/eimkua1/laminas-console.git"
+        }
+    ],
     "require": {
         "php": "^7.3 || ~8.0.0",
-        "laminas/laminas-console": "^2.6",
+        "laminas/laminas-console": "^2.9",
         "laminas/laminas-dom": "^2.6",
         "laminas/laminas-eventmanager": "^2.6.2 || ^3.0",
         "laminas/laminas-http": "^2.8.3",
